# printscreen

./: .gitignore  CMakeLists.txt  README.md
scripts/: install.ps1  install_admin.ps1  uninstall.ps1  uninstall_admin.ps1
src/: app.rc  main.cpp  resource.h
